Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25754

Qt Quick 2: wheel.modifiers don't work in "onWheel" on Windows platform

XMLWordPrintable

    • 4a8d9eed87565b20c1f10b173c652be26ea608f7

      MouseArea {
      anchors.fill: parent
      onWheel: {
      // BUG:Don't work in Windows: Qt Alfa
      if (wheel.modifiers & Qt.ControlModifier)

      { console.log("Control + wheel") }

      }

      }

        For Gerrit Dashboard: QTBUG-25754
        # Subject Branch Project Status CR V

            glwatson Glenn Watson
            mapron Smirnov Vladimir
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes